--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -24,7 +24,11 @@ $color-gray: rgb(236,236,236);
 }
 
 .roommain{
-  font-size: 22px;
+  font-size: 20px;
+}
+
+.caprow{
+  margin-top: -6px;
 }
 
 p {
