--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -3,7 +3,7 @@
     <div id="venuephotosdiv" class="col-12">
       <div class="row">
         <div class="col-4">
-          <h5><strong>Venue Photos &nbsp;</strong><a *ngIf="!showphotoupload" (click)="venuephotodisplaytoggle()">+Add Photo</a> &nbsp;</h5>
+          <h5><strong>Venue Photos &nbsp;</strong><button class="btn btn-primary" *ngIf="!showphotoupload" (click)="venuephotodisplaytoggle()">+Add Photo</button> &nbsp;</h5>
         </div>
         <div class="col-2">
           <h5 id="displayphotos" *ngIf="!showphotos && !showphotoupload" (click)="venuephotoshowtoggle()">Display Photos</h5>
