--- a/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
+++ b/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-12 text-center">
   <h2>User Verification</h2>
   <div *ngIf="!notfound">
@@ -39,4 +40,5 @@
   <div *ngIf="notfound">
     <h3>This Verification Link Has Expired</h3>
   </div>
+</div>
 </div>
