--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -8,6 +8,7 @@ $color-gray: rgb(236,236,236);
   font-size: 1.5rem;
   font-weight: 100;
   //padding: 0.5rem 0;
+  text-decoration: underline;
 }
 
 .SecHeadunderline {
