new status updates

--- a/src/app/mainroot/navbar/navbar.component.html
+++ b/src/app/mainroot/navbar/navbar.component.html
@@ -299,14 +299,18 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Venue Sign Up</h5>
+        <div class="col-12">
+          <div class="text-center">
+            <strong><h3 class="modal-title" id="exampleModalLabel">Venue Sign Up</h3></strong>
+          </div>
+        </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div *ngIf="signupcompelete" class="modal-body">
         <div class="text-center">
-          <h3>Your Venue application has been received. We will get back to you shortly.</h3>
+          <h4>Your Venue application has been received. We will get back to you shortly.</h4>
         </div>
 
       </div>
