--- a/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.scss
+++ b/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.scss
@@ -1,8 +1,4 @@
-.navchoice{
-  border: solid black 1px;
-  height: 60px;
-}
-
-.navchoice h4{
-  margin-top: 20px;
+.row{
+  margin-left: 3vw;
+  margin-top: 10vh;
 }
