--- a/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
+++ b/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
@@ -26,9 +26,11 @@
       </div>
       <h2 *ngIf="validated">Your password has been set!</h2>
     </div>
-    <div *ngIf="validateonly" class="col-md-5 col-md-offset-3 text-center">
-      <h2 *ngIf="!validated">Validating...</h2>
-      <h2 *ngIf="validated">Your Account Has been validated!</h2>
+    <div *ngIf="validateonly" class="col-md-5 col-md-offset-3">
+      <div class="text-center">
+        <h2 *ngIf="!validated">Validating...</h2>
+        <h2 *ngIf="validated">Your Account Has been validated!</h2>
+      </div>
     </div>
     <div *ngIf="validated">
       <div class="col-md-12">
