--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -33,7 +33,7 @@
                     [ngModel]="dropdownreset">
               <option value="">Send RFP</option>
               <option value="n">Create New RFP</option>
-              <option value="s">Create From Saved</option>
+              <option [disabled]="savedrfps.length < 1" value="s">Create From Saved</option>
             </select>
           </form>
         </div>
@@ -212,6 +212,7 @@
   </div>
 </div>
 
+
   <ng-template #createProp let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h4 class="modal-title">Request For Proposal</h4>
@@ -238,7 +239,7 @@
                    id="eventdate"
                    name="eventdate"
                    required
-                   [ngModel]="savedevent.date">
+                   [ngModel]="savedevent.programdate">
             <br>
             <div class="checkboxdiv">
               <input class="form-check-input"
@@ -500,7 +501,7 @@
             <select class="form-control"
                     id="roomselect"
                     name="roomselect"
-                    ngModel>
+                    [ngModel]="roomname">
               <option value="">Select Room * </option>
               <option value="no preference">No Preference</option>
               <option *ngFor="let room of roomnames" [value]="room">{{room}}</option>
@@ -518,7 +519,7 @@
             </textarea>
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Create a new event</button>
+            <button [disabled]="!rfpforminputs.valid" type="submit" class="btn btn-primary">Submit RFP</button>
             <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
           </div>
         </div> <!-- loginsignup -->
@@ -579,38 +580,50 @@
         <div *ngIf="signup && !verifysignup">
           <form (ngSubmit)="clientsignup(clientsignupform)" #clientsignupform="ngForm">
             <div class="row">
-              <div class="col-12 text-center">
-                <h3>Sign Up</h3>
+              <div class="col-12">
+                <div class="text-center">
+                  <h3>Sign Up</h3>
+                </div>
+                <div class="col-12">
+                  <div class="text-center">
+                    <h5> * Mandatory Fields </h5>
+                  </div>
+
+                </div>
               </div>
               <div class="col-6">
-                <label>First Name</label>
                 <input class="form-control"
                        type="text"
                        id="signupfirstname"
+                       required
+                       placeholder="First Name *"
                        name="signupfirstname"
                        ngModel>
               </div>
               <div class="col-6">
-                <label>Last Name</label>
                 <input class="form-control"
                        type="text"
                        id="signuplastname"
+                       required
+                       placeholder="Last Name *"
                        name="signuplastname"
                        ngModel>
               </div>
               <div class="col-6">
-                <label>Email</label>
                 <input class="form-control"
                        type="email"
                        id="signupemail"
+                       required
+                       placeholder="Email * "
                        name="signupemail"
                        ngModel>
               </div>
               <div class="col-6">
-                <label>Confirm Email</label>
                 <input (ngModelChange)="emailconfrim(clientsignupform)"
                        class="form-control"
                        type="email"
+                       required
+                       placeholder="Confrim Email *"
                        id="signupemailconfrim"
                        name="signupemailconfrim"
                        ngModel>
@@ -621,18 +634,20 @@
                 </div>
               </div>
               <div class="col-6">
-                <label>Password</label>
                 <input class="form-control"
                        type="password"
+                       required
+                       placeholder="Password *"
                        id="signuppassword"
                        name="signuppassword"
                        ngModel>
               </div>
               <div class="col-6">
-                <label>Confrim Password</label>
                 <input (ngModelChange)="passwordconfirm(clientsignupform)"
                        class="form-control"
                        type="password"
+                       required
+                       placeholder="Confirm Password *"
                        id="signuppasswordconfrim"
                        name="signuppasswordconfrim"
                        ngModel>
@@ -643,25 +658,30 @@
                 </div>
               </div>
               <div class="col-6">
-                <label>Company Name</label>
                 <input class="form-control"
                        type="text"
                        id="companyname"
+                       placeholder="Company Name"
                        name="companyname"
                        ngModel>
 
               </div>
               <div class="col-6">
-                <label>Primary Phone Number</label>
                 <input class="form-control"
                        type="text"
                        id="signupphoneinput"
+                       placeholder="Phone Number"
                        name="signupphoneinput"
                        ngModel>
               </div>
               <div class="col-12">
                 <br>
                 <button type="submit" class="btn btn-primary float-right">Sign Up</button>
+              </div>
+              <div *ngIf="invalidsignup" class="col-12">
+                <div class="text-center">
+                  <span style="color: red">Please fill out all required fields</span>
+                </div>
               </div>
             </div>
           </form>
@@ -719,28 +739,27 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let rfp of savedrfps; let i=index" (click)="populaterfpfromsaved(i, createSaved, createProp)">
-          <td>
-            {{rfp.eventname}}
+        <tr *ngFor="let rfp of savedrfps; let i=index">
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
+            {{rfp.name}}
           </td>
-          <td>
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
             {{rfp.eventdate}}
           </td>
-          <td>
-            {{rfp.eventpurpose}}
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
+            {{rfp.eventpurpose.purpose}}
           </td>
-          <td>
-            {{rfp.starttime}}
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
+            {{rfp.startime}}
           </td>
-          <td>
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
             {{rfp.endtime}}
           </td>
-          <td>
-            {{rfp.headcount}}
+          <td (click)="populaterfpfromsaved(i, createSaved, createProp )">
+            {{rfp.guestcount}}
           </td>
         </tr>
         </tbody>
       </table>
     </div>
-
   </ng-template>
