pushing changes again

--- a/src/app/mainroot/venuepage/venuepage.component.html
+++ b/src/app/mainroot/venuepage/venuepage.component.html
@@ -413,7 +413,7 @@
                     class="form-control"
                     id="eventdetails"
                     name="eventdetails"
-                    placeholder="Event Details and Accomidation Requests *"
+                    placeholder="Event Details and Accommodation Requests *"
                     required
                     [ngModel]="savedevent.eventdetails">
 
