--- a/src/app/mainroot/navbar/navbar.component.html
+++ b/src/app/mainroot/navbar/navbar.component.html
@@ -69,7 +69,7 @@
       </div>
       <div *ngIf="showpasswordreset && !emailsent" class="modal-body text-center">
         <div class="text-center">
-          <p>Enter your email and instructions on reseting your password will be sent to you.</p>
+          <p>Enter your email and instructions on resetting your password will be sent to you.</p>
         </div>
         <form (ngSubmit)="forgotpassword(passwordreset)" #passwordreset="ngForm">
           <div class="col-sm-10">
@@ -173,7 +173,8 @@
               <span style="color: red" class="help-block" *ngIf="emailmismatch">Emails must match</span>
             </div>
           <div class="form-group col-6">
-            <input type="password"
+            <input (ngModelChange)="passwordchecklength(clientsignupform)"
+                   type="password"
                    class="form-control"
                    id="C-inputPassword4"
                    ngModel
@@ -190,8 +191,16 @@
                    id="C-inputvalidatePassword4"
                    placeholder=" Confirm Password *"
                    required>
-            <span style="color: red" *ngIf="passwordmismatch" class="help-block">Passwords must match</span>
+
           </div>
+            <div class="col-12">
+              <div class="text-center">
+                <span style="color: red" *ngIf="passwordmismatch" class="help-block">Passwords must match</span>
+              </div>
+              <div class="text-center">
+                <span style="color:red" *ngIf="invalidpassword" class="help-block">Passwords must be at least 8 characters in length</span>
+              </div>
+            </div>
           <div class="form-group col-6">
             <input type="text"
                    class="form-control"
@@ -304,7 +313,7 @@
             <strong><h3 class="modal-title" id="exampleModalLabel">Venue Sign Up</h3></strong>
           </div>
         </div>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close leftshim" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
