--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -512,7 +512,7 @@
                     class="form-control"
                     id="eventdetails"
                     name="eventdetails"
-                    placeholder="Event Details and Accomidation Requests *"
+                    placeholder="Event Details and Accommodation Requests *"
                     required
                     [ngModel]="savedevent.eventdetails">
 
