--- a/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
+++ b/src/app/verification/uservenueverificaiton/uservenueverificaiton.component.html
@@ -1,15 +1,17 @@
 <div class="container">
-<div class="col-md-12 text-center">
+<div class="col-12 text-center">
   <h2>User Verification</h2>
-  <div *ngIf="!notfound">
-    <div *ngIf="!validateonly" class="col-md-5 col-md-offset-3 text-center">
-      <div *ngIf="!validated">
+  <div *ngIf="!notfound" class="text-center">
+    <div *ngIf="!validateonly">
+      <div *ngIf="!validated" class="text-center">
         <h4>Set Your Password</h4>
         <form (ngSubmit)="updatepassword()" #passwordform="ngForm">
           <input (click)="resetpasswordmismatch()"
+                 (ngModelChange)="checkpasswordvalidate()"
                  type="password"
                  id="password1"
                  name="password1"
+                 class="form-control"
                  ngModel
                  placeholder="Enter a password">
           <br>
@@ -17,11 +19,15 @@
                  type="password"
                  id="password2"
                  name="password2"
+                 class="form-control"
                  ngModel
                  placeholder="Enter password again">
           <br>
-          <span  *ngIf="passwordmismatch">Your passwords do not match</span>
-          <button class="STButton" type="submit">Submit</button>
+          <span style="color: red"  *ngIf="passwordmismatch">Your passwords do not match</span>
+          <div>
+            <span style="color: red" *ngIf="invalidpassword">A password must be at least 8 characters in length</span>
+          </div>
+          <button class="btn btn-outline-primary" type="submit">Submit</button>
         </form>
       </div>
       <h2 *ngIf="validated">Your password has been set!</h2>
@@ -34,7 +40,7 @@
     </div>
     <div *ngIf="validated">
       <div class="col-md-12">
-        <button class="STButton" (click)="navhomepage()">Navigate To Home Page</button>
+        <button class="btn btn-outline-primary" (click)="navhomepage()">Navigate To Home Page</button>
       </div>
 
     </div>
